Fixed css bug on mobile browsers

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,7 +54,6 @@ a {
 .nav-header ul {
     font-size: 130%;
     list-style: none;
-    background: #eaeaf7;
     border: 0;
     margin: 0;
     padding: 0;
